hphp/hack/test/typecheck/xhp/xhp_cvar_arity2.php.exp
File "xhp_cvar_arity2.php", line 7, characters 5-10:
The type Vector expects 1 type parameter(s) (Typing[4101])
