hphp/hack/test/typecheck/xhp/xhp_cvar_arity2.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

class :fb:support-form:diff {

  attribute
    Vector addedfields @required;
}
